fixing pay button alignment

--- a/css/main.css
+++ b/css/main.css
@@ -384,3 +384,8 @@ button:hover {
   background: black;
   color: white;
 }
+form {
+  display: flex;
+  align-content: center;
+  justify-content: center;
+}
