--- a/less/paywall.less
+++ b/less/paywall.less
@@ -353,4 +353,10 @@ body {
       }
   
   
+
+form {
+              display: flex;
+          align-content: center;
+          justify-content: center;
+      }
   
